--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+RYPu16nt+vBVoWJJEG7a9OH5syP2UUAT35e0epuE3Y=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,18 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=institute_db
 DB_USERNAME=root
 DB_PASSWORD=
+
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=infotestmailer2022@gmail.com
+MAIL_PASSWORD=testmailer@123
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=infotestmailer2022@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,15 +36,6 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
