--- a/.env.example
+++ b/.env.example
@@ -22,12 +22,12 @@ MAIL_USERNAME=infotestmailer2022@gmail.com
 MAIL_PASSWORD=testmailer@123
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=infotestmailer2022@gmail.com
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_NAME="Institute Head Office"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
